--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2"
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "ts-loader": "^8.0.2",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
