--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "minimatrix-polyroots": "^3.0.5"
   }
 }
