--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "minimatrix-polyroots": "^3.0.5"
+    "minimatrix-polyroots": "^3.0.5",
+    "node-html-parser": "^1.2.20"
   }
 }
